2012-03-15  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* src/html/oap.xsl: Match user (edit/details) in a commands_response,
	as these now have to include response to describe_auth, too.

	* src/gsad_oap.c (create_user_oap): Modify create-user command if
	enable_ldap_connect parameter is set and issue describe_auth.
	(save_user_oap): Include sources element in oap command and include
	desribe_auth command.
	(edit_user_oap): Include describe_auth command.
	(modify_auth_oap): Allow ldap_connect method, fixed typo in trace
	msg.

2011-03-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Updated version number to 3.0+rc2.

	* src/html/help.xsl: Updated version number to 3.0+rc2.

2011-03-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the gsa 3.0+rc1 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Updated version to 3.0+rc1.

2012-03-15  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* src/html/oap.xsl (html-create-user-form): If per-user-ldap auth. is
	configured and enabled, allow to create a user with "ldap only"-
	option.
	(html-users-table, user): If per-user-ldap auth, add column to show
	if user is allowed to use ldap-auth only; allow modifications, too.
	(group): Include per-user-ldap-conf and link to help.
	(describe_auth_response): Match ldap_connect.

	* src/html/help.xsl: Added basic help for per-user ldap configuration.

2012-03-15  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* src/gsad.c (init_validator): Added new validation target
	"enable_ldap_connect", allow "ldap_connect" for "group" parameter,
	allow "@" within login names for "user@domain"- scenarios.

2011-03-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/img/wizard.png: New.

	* CMakeLists.txt: Install new icon.

2012-03-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_report): Replace the UUID with a fixed string in the