@@ -1,3 +1,8 @@
+2012-03-15  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	* src/gsad_omp.c (create_note_omp, create_override_omp): Replace explicit
+	fetching of report with call to get_report.
+
 2012-03-15  Felix Wolfsteller <felix.wolfsteller@greenbone.net>
 
 	* src/html/oap.xsl: Match user (edit/details) in a commands_response,
